[WFCORE-6635] Add a base JBossModulesCommandBuilder for launching other types like the appclient or other JBoss Module containers in a new process.
https://issues.redhat.com/browse/WFCORE-6635
Signed-off-by: James R. Perkins <jperkins@redhat.com>